--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Random Quote generator</title>
         <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-        <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="./bmc.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/bmc.css">
         <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png">
@@ -129,6 +129,6 @@
             </div>
         </footer>
 
-        <script src="./script.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
